--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "lightsensor"
+name = "brightness-exporter"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# bh1750 = { git = "https://github.com/wose/bh1750", branch = "master" }
 embedded-hal = "1.0.0"
 linux-embedded-hal = "0.4.0"
 prometheus_exporter = "0.8.5"
